--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ environment:
 
 dependencies:
   flutter_screenutil: 1.0.2
+  animated_text_kit: 2.0.0
   drawing_animation: ^0.1.3
   carousel_slider: 1.4.1
   flutter:
@@ -118,6 +119,15 @@ flutter:
         - asset: fonts/Averia_Sans_Libre/AveriaSansLibre-Regular.ttf
         - asset: fonts/Averia_Sans_Libre/AveriaSansLibre-Italic.ttf
           style: italic
+    - family: Permanent Marker
+      fonts:
+        - asset: fonts/Permanent_Marker/PermanentMarker-Regular.ttf
+    - family: Righteous
+      fonts:
+        - asset: fonts/Righteous/Righteous-Regular.ttf
+    - family: Satisfy
+      fonts:
+        - asset: fonts/Satisfy/Satisfy-Regular.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
